package interfaces;

public interface OperacionesCL4 {
    public void insertar(Object elemento);
}