package modelo.criterios;

import modelo.datos.Cancion;

public class PorArtista implements CriterioOrdenacion{
    public int comparar(Cancion c1, Cancion c2) {
        if (c1.getArtista.compareTo()//completar jsdjsj
    }
}
